<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnAddRecipe"
        android:layout_width="125dp"
        android:layout_height="71dp"
        android:layout_marginBottom="544dp"
        android:text="@string/button_Recipe"
        android:textSize="12sp"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edtRecipeName"
        android:layout_width="227dp"
        android:layout_height="51dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="540dp"
        android:ems="10"
        android:hint="@string/text_areaRecipeName"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btnAddRecipe" />

    <Button
        android:id="@+id/btnAddIngredients"
        android:layout_width="125dp"
        android:layout_height="71dp"
        android:layout_marginTop="20dp"
        android:text="@string/button_Ingredients"
        android:textSize="12sp"
        app:cornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.082"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAddRecipe" />

    <EditText
        android:id="@+id/edtIngredients"
        android:layout_width="227dp"
        android:layout_height="51dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/text_areaIngredients"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toEndOf="@+id/btnAddIngredients"
        app:layout_constraintTop_toBottomOf="@+id/edtRecipeName" />

    <Button
        android:id="@+id/btnAddInstructions"
        android:layout_width="127dp"
        android:layout_height="71dp"
        android:layout_marginTop="20dp"
        android:text="@string/button_Instructions"
        android:textSize="10sp"
        app:cornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.081"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAddIngredients" />

    <EditText
        android:id="@+id/edtInstructions"
        android:layout_width="227dp"
        android:layout_height="51dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/text_areaInstructions"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.441"
        app:layout_constraintStart_toEndOf="@+id/btnAddInstructions"
        app:layout_constraintTop_toBottomOf="@+id/edtIngredients" />

    <Button
        android:id="@+id/btnSaveRecipe"
        android:layout_width="127dp"
        android:layout_height="71dp"
        android:layout_marginTop="644dp"
        android:text="@string/button_Save"
        app:cornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.133"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnClear"
        android:layout_width="127dp"
        android:layout_height="71dp"
        android:layout_marginTop="644dp"
        android:text="@string/button_Clear"
        app:cornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.873"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="250dp"
        android:layout_marginBottom="104dp"
        android:background="@drawable/gradient_cardview"
        app:cardBackgroundColor="#D5BF9A"
        app:cardCornerRadius="18dp"
        app:cardElevation="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_cardview">

            <TextView
                android:id="@+id/edtRecipeArea"
                android:layout_width="317dp"
                android:layout_height="200dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="17dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="26dp"
                android:text="@string/text_areaRecipe"
                android:textStyle="bold" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="387dp"
        android:layout_height="69dp"
        android:layout_marginTop="28dp"
        app:cardBackgroundColor="@color/teal_200"
        app:cardCornerRadius="20dp"
        app:cardElevation="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_title">


            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="364dp"
                android:layout_height="43dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="13dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="10dp"
                android:text="@string/author"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>